# Cropper

./: .gitignore  README.md  pyproject.toml  requirements.txt  ui_gen.sh
design/: main.ui
src/cropper/: main.py
src/cropper/models/: file_manager.py  image.py  load.py
src/cropper/views/: full_page_dialog.py  main_view.py  main_view_ui.py  pages_view.py
