[project]
name = "cropper"
version = "0.0.1"
authors = [
    { name="Ewelina Gurtowska"}
]
license = 'GPL-3.0-or-later'
description = "Crops magrins from comic books for better experience on e-ink readers."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
]
dependencies = [
    'PySide6 >= 6.9.1',
]

[project.scripts]
cropper = "cropper.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.git",
    "/.gitignore",
    "/.idea",
    '/.venv',
    "/build",
    "/dist"
]

[tool.hatch.build.targets.wheel]
packages = ["src/cropper"]
